# neovim

./: AGENTS.md  CMakeLists.txt  entitlements.plist
.agents/: MEMORY.md  PLAN.md
.github/workflows/: test.yml
_patch/: emoji-data.txt.patch  terminfo_defs.h.patch  third-party.patch
cmake/: FindHoard.cmake  FindLibLUV.cmake  FindMiMalloc.cmake  FindMimalloc.cmake  FindRpMalloc.cmake  FindRpmalloc.cmake  FindTcMalloc.cmake
cmake.config/: CMakeLists.txt  config.h.in
cmake.deps/: CMakeLists.txt  deps.txt
cmake.deps/cmake/: BuildGettext.cmake  BuildHoard.cmake  BuildJemalloc.cmake  BuildLibiconv.cmake  BuildLibtermkey.cmake  BuildLibuv.cmake  BuildLibvterm.cmake  BuildLpeg.cmake  BuildLua.cmake  BuildLuajit.cmake  BuildLuarocks.cmake  BuildLuv.cmake  BuildMimalloc.cmake  BuildMsgpack.cmake  BuildRpMalloc.cmake  BuildTreesitter.cmake  BuildTreesitterParsers.cmake  BuildUnibilium.cmake
config/: CMakeLists.txt  config.h.in
runtime/doc/: api.txt  treesitter.txt
runtime/lua/vim/: _comment.lua  _editor.lua  treesitter.lua
runtime/lua/vim/_meta/: api.lua  api_keysets.lua
runtime/lua/vim/lsp/: _folding_range.lua  util.lua
runtime/lua/vim/treesitter/: _fold.lua  highlighter.lua
scripts/: download-unicode-files.sh  download-unicode-files2.sh  update_terminfo.sh
src/: coverity-model.c
src/cjson/: dtoa_config.h  lua_cjson.c  strbuf.c
src/mpack/: lmpack.c
src/nvim/: CMakeLists.txt  auevents.lua  buffer_defs.h  edit.c  ex_cmds.lua  ex_docmd.c  extmark.c  fileio.c  grid.c  grid_defs.h  main.c  marktree.c  marktree.h  marktree_defs.h  memory.c  memory.h  option.c  popupmnu.c  terminal.c  ui_compositor.c  ui_compositor.h  undo.c  version.c  wcwidth9.h
src/nvim/api/: buffer.c  keysets_defs.h  vim.c
src/nvim/lua/: executor.c  treesitter.c  vim.lua
src/nvim/tui/: terminfo.c  terminfo.h  terminfo_defs.h  tui.c  tui.h
test/functional/lua/: comment_spec.lua
test/functional/treesitter/: utils_spec.lua
test/functional/ui/: compositor_prune_spec.lua
test/unit/: marktree_spec.lua  terminfo_spec.lua  testutil.lua  tui_flush_spec.lua
